--- a/firefly.html
+++ b/firefly.html
@@ -7,7 +7,7 @@
   <script src="assets/js/fireflytest.js"></script>
   <script src="assets/js/firefly-v0.1.js"></script>
 
-  <script> window.onload = function() { firefly("test", 55, "big", "#003399"); }; </script> 
+  <script> window.onload = function() { firefly("test", 55, "big", "#FFFFFF"); }; </script> 
 </head>
 
 <body>
@@ -22,6 +22,7 @@
       <button type="button" id="green" onclick="clr(green)" class="btn btn-success btn-lg">Green</button>    
       <button type="button" id="yellow" onclick="clr(yellow)" class="btn btn-warning btn-lg">Yellow</button> 
       <button type="button" id="red" onclick="clr(red)" class="btn btn-danger btn-lg">Red</button>
+      <button type="button" id="white" onclick="clr(white)" class="btn btn-secondary-outline btn-lg">White</button>
     </div><br>
     <div id="size">
       <button type="button" id="tiny" onclick="sz(tiny)" class="btn btn-primary btn-lg">Tiny</button>    
@@ -31,5 +32,6 @@
     </div><br>
   </div>
   <div id="test"> 
+    <img id="test" src="http://24.media.tumblr.com/52dfd8634d622d567d83eba94dd42cf1/tumblr_mkzf0ba7dX1rzoyxwo1_500.jpg">
   </div>
 </body>
