added browser support for flexbox for most browsers. also centered everything. fixed firely.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+<div>
   <div id="title">CHRISTINA ZHU</div>
   <div id="content">
     <div id="photo"><img id="pic" src="assets/img/avatar.jpg"></div>
@@ -55,4 +56,5 @@
       <a class="icon" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
     </div>
   </div>
+</div>
 </body>
