i do too many extracurriculars

--- a/index.html
+++ b/index.html
@@ -45,9 +45,18 @@
       <b>things i do</b><br>
       co-founder @ <a href="http://hackdavis.io">hackdavis</a> <br>
       instructor @ <a href="http://girlswhocode.com">girls who code</a><br>
+      devangelist @ <a href="http://blog.clarifai.com/clarifai-champions-building-the-next-generation-of-technical-evangelists/"> clarifai champions</a><br>
       officer @ <a href="http://daviscsclub.org">davis cs club</a><br>
+      business & finance commissioner @ <a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">asucd</a><br>
+
+      <br>
+
+      <b>honors</b><br>
       fellow '15 @ <a href="http://pennappsfellows.com">pennapps fellows</a><br>
-      engineering diversity scholar 2015 @ <a href="http://boxdiversityscholarship.com">box</a> <br><br>
+      engineering diversity scholar 2015 @ <a href="http://boxdiversityscholarship.com">box</a>
+
+
+       <br><br>
 
       <b>contact</b><br>
       <a class="icon" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
