updated honors and some css

--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
   <div id="content">
     <div id="photo"><img id="pic" src="assets/img/avatar.jpg"></div>
     <div id="text">
-      hey, i'm christina!<br>
-      i'm currently studying computer science at uc davis.<br><br>
+      hey, i'm christina! i'm a computer science student at uc davis.<br><br>
 
       <b>work</b><br>
-      software engineering intern @ <a href="http://amazon.com">amazon</a> <span class="sub">- summer '16</span><br>
-      software engineering intern @ <a href="http://monetate.com">monetate</a> <span class="sub">- summer '15</span><br>
-      programming TA @ <a href="http://pennhealthx.com">penn healthx</a> <span class="sub">- summer '15</span><br><br>
+      software engineering intern @ <a href="http://amazon.com">amazon</a> <span class="sub">- 2016</span><br>
+      software engineering intern @ <a href="http://monetate.com">monetate</a> <span class="sub">- 2015</span><br>
+      programming TA @ <a href="http://pennhealthx.com">penn healthx</a> <span class="sub">- 2015</span><br><br>
 
       <b>things i do</b><br>
       co-founder @ <a href="http://hackdavis.io">hackdavis</a> <br>
@@ -53,8 +52,8 @@
 
       <b>honors</b><br>
       fellow '15 @ <a href="http://pennappsfellows.com">pennapps fellows</a><br>
-      engineering diversity scholar 2015 @ <a href="http://boxdiversityscholarship.com">box</a>
-
+      engineering diversity scholar 2015 @ <a href="http://boxdiversityscholarship.com">box</a><br>
+      1st place amazon alexa + 2nd place IBM bluemix @ <a href="devpost.com/software/airscribe">treehacks 2016</a>
 
        <br><br>
 
