--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <b>honors</b><br>
       fellow '15 @ <a href="http://pennappsfellows.com">pennapps fellows</a><br>
       engineering diversity scholar 2015 @ <a href="http://boxdiversityscholarship.com">box</a><br>
-      1st place amazon alexa + 2nd place IBM bluemix @ <a href="devpost.com/software/airscribe">treehacks 2016</a>
+      1st place amazon alexa + 2nd place IBM bluemix @ <a href="http://devpost.com/software/airscribe">treehacks 2016</a>
 
        <br><br>
 
