--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
       <br>
 
       <b>honors</b><br>
-      fellow '15 @ <a href="http://pennappsfellows.com">pennapps fellows</a><br>
+      grace hopper scholar 2016 @ <a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">anita borg</a><br>
+      fellow 2015 @ <a href="http://pennappsfellows.com">pennapps fellows</a><br>
       engineering diversity scholar 2015 @ <a href="http://boxdiversityscholarship.com">box</a><br>
       1st place amazon alexa + 2nd place IBM bluemix @ <a href="http://devpost.com/software/airscribe">treehacks 2016</a>
 
-       <br><br>
+      <br><br>
 
       <b>contact</b><br>
       <a class="icon" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
