--- a/index.html
+++ b/index.html
@@ -30,39 +30,52 @@
 
 <body>
 <div>
-  <div id="title">CHRISTINA ZHU</div>
-  <div id="content">
-    <div id="photo"><img id="pic" src="assets/img/avatar.jpg"></div>
-    <div id="text">
-      hey, i'm christina! i'm a computer science student at uc davis.<br><br>
+  <div class="content">
+    <div id="photo"><img id="pic" src="https://pbs.twimg.com/profile_images/763901943148191745/9BToh3jE_400x400.jpg"></div>
+    <div id="title">CHRISTINA ZHU<br></div>
+  </div>
 
-      <b>work</b><br>
+  <div class="content">
+    <div id="text">
+      <div id="section0">
+      <h3>hello!</h3>
+      <p>hey, i'm christina! i'm a computer science student at uc davis.<br>
+      feel free to reach out anytime. you can find me at grace hopper '16!</p>
+      <div id="icons">
+        <a class="icon" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
+        <a class="icon" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
+        <a class="icon" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
+        <a class="icon" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
+      </div>
+      </div>
+      <br>
+      <div id="section">
+      <h3>work</h3>
       software engineering intern @ <a href="http://amazon.com">amazon</a> <span class="sub">- 2016</span><br>
       software engineering intern @ <a href="http://monetate.com">monetate</a> <span class="sub">- 2015</span><br>
-      programming TA @ <a href="http://pennhealthx.com">penn healthx</a> <span class="sub">- 2015</span><br><br>
-
-      <b>things i do</b><br>
-      co-founder @ <a href="http://hackdavis.io">hackdavis</a> <br>
-      instructor @ <a href="http://girlswhocode.com">girls who code</a><br>
-      devangelist @ <a href="http://blog.clarifai.com/introducing-the-clarifai-champions/"> clarifai champions</a><br>
-      officer @ <a href="http://daviscsclub.org">davis cs club</a><br>
-      business & finance commissioner @ <a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">asucd</a><br>
+      programming TA @ <a href="http://pennhealthx.com">penn healthx</a> <span class="sub">- 2015</span><br>
+      </div>
+      <br>
+      <div id="section2">
+      <h3>things i do</h3>
+      co-founder + director @ <a href="http://hackdavis.io">hackdavis</a> <span class="sub"> - 2015 ~ 2016</span><br>
+      instructor @ <a href="http://girlswhocode.com">girls who code</a><span class="sub"> - 2015 ~ 2016</span><br>
+      devangelist @ <a href="http://blog.clarifai.com/introducing-the-clarifai-champions/"> clarifai champions</a><span class="sub"> - 2016</span><br>
+      officer @ <a href="http://daviscsclub.org">davis cs club</a><span class="sub"> - 2015</span><br>
+      business & finance commissioner @ <a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">asucd</a><span class="sub"> - 2013 ~ 2016</span><br>
+      </div>
 
       <br>
-
-      <b>honors</b><br>
-      grace hopper scholar 2016 @ <a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">anita borg</a><br>
-      fellow 2015 @ <a href="http://pennappsfellows.com">pennapps fellows</a><br>
-      engineering diversity scholar 2015 @ <a href="http://boxdiversityscholarship.com">box</a><br>
-      1st place amazon alexa + 2nd place IBM bluemix @ <a href="http://devpost.com/software/airscribe">treehacks 2016</a>
-
-      <br><br>
-
-      <b>contact</b><br>
-      <a class="icon" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
-      <a class="icon" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
-      <a class="icon" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
-      <a class="icon" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
+      <div id="section3">
+      <h3>honors</h3>
+      grace hopper scholar @ <a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">anita borg</a><span class="sub"> - 2016</span><br>
+      1st place amazon alexa @ <a href="http://devpost.com/software/airscribe">treehacks</a><span class="sub"> - 2016</span><br>
+      2nd place IBM bluemix @ <a href="http://devpost.com/software/airscribe">treehacks</a><span class="sub"> - 2016</span><br>
+      fellow @ <a href="http://pennappsfellows.com">pennapps fellows</a><span class="sub"> - 2015</span><br>
+      engineering diversity scholar @ <a href="http://boxdiversityscholarship.com">box</a><span class="sub"> - 2015</span><br>
+      twitter flight scholarship @ <a href="https://dev.twitter.com/flight/2015">twitter flight</a>
+      <span class="sub"> - 2015</span></div>
+      <br>
     </div>
   </div>
 </div>
