--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <a class="icon" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
         <a class="icon" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
         <a class="icon" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
+        <a class="icon" href="cszhu_resume.pdf"><i class="fa fa-lg fa-file"></i></a>
       </div>
       </div>
       <br>
