Added google analytics, updated avatar, changed blurb

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TL2MWN');</script>
+  <!-- End Google Tag Manager -->
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,9 +37,14 @@
 </head>
 
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TL2MWN"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
   <div>
     <div class="content">
-      <div id="photo"><img id="pic" src="https://pbs.twimg.com/profile_images/763901943148191745/9BToh3jE_400x400.jpg"></div>
+      <div id="photo"><img id="pic" src="https://pbs.twimg.com/profile_images/783398115378290688/4lFgeP0t.jpg"></div>
       <div class="column">
         <center><img src="http://i748.photobucket.com/albums/xx122/luuuh/divisorias/barinhas25.gif"></center>
         <div id="title">CHRISTINA ZHU<br></div>
@@ -49,8 +62,8 @@
       <div id="text">
         <div id="section0">
           <h3>hello!</h3>
-          <p>hey, i'm christina! i'm a computer science student at uc davis.<br>
-            feel free to reach out anytime. you can find me at grace hopper '16!</p>
+          <p>hey, i'm christina! i'm studying computer science at uc davis, graduating june 2017.
+            feel free to reach out! <br><b>ps.</b> you can find me at grace hopper '16 :)</p>
           </div>
           <br>
           <div id="section">
