--- a/index.html
+++ b/index.html
@@ -75,37 +75,134 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div id="text">
         <div id="section0">
           <h3>hello!</h3>
-          <p>hey, i'm christina! i'm studying computer science at uc davis, graduating june 2017.
-            feel free to reach out! <br><b>ps.</b> you can find me at grace hopper '16 :)</p>
+          <p>hey, i'm christina! i'm studying computer science at uc davis, graduating june 2017. here are some things that i'm passionate about:
+            <ul>
+            <li> developer advocacy 
+            <li> diversity in tech
+            <li> human-computer interaction
+            <li> hackathons
+            </ul>
+          feel free to reach out!! i love meeting new people! <img src="http://67.media.tumblr.com/tumblr_m9gclhODl61qzckow.gif">
+          <br>
           </div>
           <br>
           <div id="section">
             <h3>work</h3>
-            software engineering intern @ <a href="http://amazon.com">amazon</a> <span class="sub">- 2016</span><br>
-            software engineering intern @ <a href="http://monetate.com">monetate</a> <span class="sub">- 2015</span><br>
-            programming TA @ <a href="http://pennhealthx.com">penn healthx</a> <span class="sub">- 2015</span><br>
+
+            <div class="card">
+              <img src="http://67.media.tumblr.com/63dde832a5257319839b938f72e4f9f7/tumblr_inline_mf8apuF66h1qid2nw.gif">
+              <div class="cardInfo">
+                <p>software engineering intern</p>
+                <p><a href="http://amazon.com">amazon</a> <span class="sub">- 2016</span></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="http://66.media.tumblr.com/tumblr_m9pddeBlxk1qid2nw.gif">
+              <div class="cardInfo">
+                <p>devangelist (remote)</p>
+                <p><a href="http://blog.clarifai.com/introducing-the-clarifai-champions/"> clarifai champions</a><span class="sub"> - 2016</span></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="http://65.media.tumblr.com/tumblr_ma6tf5yYJt1qid2nw.gif">
+              <div class="cardInfo">
+                <p>software engineering intern</p>
+                <p><a href="http://monetate.com">monetate</a> <span class="sub">- 2015</span></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="http://67.media.tumblr.com/tumblr_m0myoh2vqJ1qcfn0j.gif">
+              <div class="cardInfo">
+                <p><i>Intro To Programming</i> TA</p>
+                <p><a href="http://pennhealthx.com">penn healthx</a> <span class="sub">- 2015</span></p>
+              </div>
+            </div>
+
           </div>
           <br>
           <div id="section2">
             <h3>things i do</h3>
-            co-founder + director @ <a href="http://hackdavis.io">hackdavis</a> <span class="sub"> - 2015 ~ 2016</span><br>
-            instructor @ <a href="http://girlswhocode.com">girls who code</a><span class="sub"> - 2015 ~ 2016</span><br>
-            devangelist @ <a href="http://blog.clarifai.com/introducing-the-clarifai-champions/"> clarifai champions</a><span class="sub"> - 2016</span><br>
-            officer @ <a href="http://daviscsclub.org">davis cs club</a><span class="sub"> - 2015</span><br>
-            business & finance commissioner @ <a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">asucd</a><span class="sub"> - 2013 ~ 2016</span><br>
+
+            <div class="card">
+              <img src="http://67.media.tumblr.com/tumblr_m3j745vbWk1qid2nw.gif">
+              <div class="cardInfo">
+                <p>co-founder + director</p>
+                <p><a href="http://hackdavis.io">hackdavis</a> <span class="sub"> - 2015 ~ present</span></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="http://67.media.tumblr.com/tumblr_m0myo3VSD01qcfn0j.gif">
+              <div class="cardInfo">
+                <p>instructor</p>
+                <p><a href="http://girlswhocode.com">girls who code</a><span class="sub"> - 2015 ~ 2016</span></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="http://67.media.tumblr.com/tumblr_m0myq4go1x1qcfn0j.gif">
+              <div class="cardInfo">
+                <p>officer</p>
+                <p><a href="http://daviscsclub.org">davis computer science club</a><span class="sub"> - 2015</span></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="http://67.media.tumblr.com/tumblr_m3j74nFJao1qid2nw.gif">
+              <div class="cardInfo">
+                <p>business & finance commissioner</p>
+                <p><a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">asucd</a><span class="sub"> - 2013 ~ present</p>
+              </div>
+            </div>
           </div>
 
           <br>
           <div id="section3">
             <h3>honors</h3>
-            grace hopper scholar @ <a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">anita borg</a><span class="sub"> - 2016</span><br>
-            1st place amazon alexa @ <a href="http://devpost.com/software/airscribe">treehacks</a><span class="sub"> - 2016</span><br>
-            2nd place IBM bluemix @ <a href="http://devpost.com/software/airscribe">treehacks</a><span class="sub"> - 2016</span><br>
-            fellow @ <a href="http://pennappsfellows.com">pennapps fellows</a><span class="sub"> - 2015</span><br>
-            engineering diversity scholar @ <a href="http://boxdiversityscholarship.com">box</a><span class="sub"> - 2015</span><br>
-            twitter flight scholarship @ <a href="https://dev.twitter.com/flight/2015">twitter flight</a>
-            <span class="sub"> - 2015</span></div>
-            <br>
+
+            <div class="card">
+              <img src="http://67.media.tumblr.com/tumblr_m0myoriHdv1qcfn0j.gif">
+              <div class="cardInfo">
+                <p>grace hopper scholar</p>
+                <p><a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">anita borg institute</a><span class="sub"> - 2016</span></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="http://67.media.tumblr.com/tumblr_ma6tgvLNEA1qid2nw.gif">
+              <div class="cardInfo">
+                <p>1st place amazon alexa + 2nd place IBM bluemix</p>
+                <p><a href="http://devpost.com/software/airscribe">treehacks</a><span class="sub"> - 2016</span></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="http://66.media.tumblr.com/tumblr_ma6tgh9CKV1qid2nw.gif">
+              <div class="cardInfo">
+                <p>engineering diversity scholar</p>
+                <p><a href="http://boxdiversityscholarship.com">box</a><span class="sub"> - 2015</span></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="http://66.media.tumblr.com/tumblr_m3j73uCEMi1qid2nw.gif">
+              <div class="cardInfo">
+                <p>pennapps fellow</p>
+                <p><a href="http://pennappsfellows.com">pennapps fellows</a><span class="sub"> - 2015</span></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="http://65.media.tumblr.com/tumblr_m0myokN4xN1qcfn0j.gif">
+              <div class="cardInfo">
+                <p>twitter flight scholarship</p>
+                <p><a href="https://dev.twitter.com/flight/2015">twitter flight</a><span class="sub"> - 2015</span></p>
+              </div>
+            </div>
+            
           </div>
         </div>
       </div>
