Updated description capitalized everything

--- a/index.html
+++ b/index.html
@@ -74,42 +74,42 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="content">
       <div id="text">
         <div id="section0">
-          <h3>hello!</h3>
-          <p>hey, i'm christina! i'm studying computer science at uc davis, graduating june 2017. here are some things that i'm passionate about:
+          <h3>Hello!</h3>
+          <p>I'm Christina! I'm studying Computer Science at UC Davis, graduating June 2017. Here are some things that I'm passionate about:
             <ul>
-            <li> developer advocacy 
-            <li> diversity in tech
-            <li> human-computer interaction
-            <li> hackathons
+            <li> Developer advocacy 
+            <li> Diversity in tech
+            <li> Hackathons
+            <li> Startups and entrepreneurship
             </ul>
-          feel free to reach out!! i love meeting new people! <img src="http://67.media.tumblr.com/tumblr_m9gclhODl61qzckow.gif">
+          Feel free to reach out!! I love meeting new people! <img src="http://67.media.tumblr.com/tumblr_m9gclhODl61qzckow.gif">
           <br>
           </div>
           <br>
           <div id="section">
-            <h3>work</h3>
+            <h3>Work</h3>
 
             <div class="card">
               <img src="http://66.media.tumblr.com/tumblr_m9pddeBlxk1qid2nw.gif">
               <div class="cardInfo">
-                <p>software engineering intern</p>
-                <p><a href="http://amazon.com">amazon</a> <span class="sub">- 2016</span></p>
+                <p>Software Engineering Intern</p>
+                <p><a href="http://amazon.com">Amazon</a> <span class="sub">- 2016</span></p>
               </div>
             </div>
 
             <div class="card">
               <img src="http://66.media.tumblr.com/tumblr_ma6tfdeIpa1qid2nw.gif">
               <div class="cardInfo">
-                <p>devangelist (remote)</p>
-                <p><a href="http://blog.clarifai.com/introducing-the-clarifai-champions/"> clarifai champions</a><span class="sub"> - 2016</span></p>
+                <p>Devangelist (Remote)</p>
+                <p><a href="http://blog.clarifai.com/introducing-the-clarifai-champions/"> Clarifai Champions</a><span class="sub"> - 2016</span></p>
               </div>
             </div>
 
             <div class="card">
               <img src="http://67.media.tumblr.com/tumblr_ma6tgaOpdx1qid2nw.gif">
               <div class="cardInfo">
-                <p>software engineering intern</p>
-                <p><a href="http://monetate.com">monetate</a> <span class="sub">- 2015</span></p>
+                <p>Software Engineering Intern</p>
+                <p><a href="http://monetate.com">Monetate</a> <span class="sub">- 2015</span></p>
               </div>
             </div>
 
@@ -117,89 +117,89 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <img src="http://66.media.tumblr.com/tumblr_m0mypsVrSH1qcfn0j.gif">
               <div class="cardInfo">
                 <p><i>Intro To Programming</i> TA</p>
-                <p><a href="http://pennhealthx.com">penn healthx</a> <span class="sub">- 2015</span></p>
+                <p><a href="http://pennhealthx.com">Penn HealthX</a> <span class="sub">- 2015</span></p>
               </div>
             </div>
 
           </div>
           <br>
           <div id="section2">
-            <h3>things i do</h3>
+            <h3>Things I Do</h3>
 
             <div class="card">
               <img src="http://65.media.tumblr.com/tumblr_ma6tf5yYJt1qid2nw.gif">
               <div class="cardInfo">
-                <p>co-founder + director</p>
-                <p><a href="http://hackdavis.io">hackdavis</a> <span class="sub"> - 2015 ~ present</span></p>
+                <p>Co-Founder</p>
+                <p><a href="http://hackdavis.io">HackDavis</a> <span class="sub"> - 2015 ~ present</span></p>
               </div>
             </div>
 
             <div class="card">
               <img src="http://66.media.tumblr.com/tumblr_ma6tgh9CKV1qid2nw.gif">
               <div class="cardInfo">
-                <p>instructor</p>
-                <p><a href="http://girlswhocode.com">girls who code</a><span class="sub"> - 2015 ~ 2016</span></p>
+                <p>Instructor</p>
+                <p><a href="http://girlswhocode.com">Girls Who Code</a><span class="sub"> - 2015 ~ 2016</span></p>
               </div>
             </div>
 
             <div class="card">
               <img src="http://67.media.tumblr.com/tumblr_m0myq4go1x1qcfn0j.gif">
               <div class="cardInfo">
-                <p>officer</p>
-                <p><a href="http://daviscsclub.org">davis computer science club</a><span class="sub"> - 2015</span></p>
+                <p>Officer</p>
+                <p><a href="http://daviscsclub.org">Davis CS Club</a><span class="sub"> - 2015</span></p>
               </div>
             </div>
 
             <div class="card">
               <img src="http://67.media.tumblr.com/tumblr_m9pearwzkj1qid2nw.gif">
               <div class="cardInfo">
-                <p>business & finance commissioner</p>
-                <p><a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">asucd</a><span class="sub"> - 2013 ~ present</p>
+                <p>Business & Finance Commissioner</p>
+                <p><a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">ASUCD</a><span class="sub"> - 2013 ~ present</p>
               </div>
             </div>
           </div>
 
           <br>
           <div id="section3">
-            <h3>honors</h3>
+            <h3>Honors</h3>
 
             <div class="card">
               <img src="http://67.media.tumblr.com/tumblr_m0myoh2vqJ1qcfn0j.gif">
               <div class="cardInfo">
-                <p>grace hopper scholar</p>
-                <p><a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">anita borg institute</a><span class="sub"> - 2016</span></p>
+                <p>Grace Hopper Scholar</p>
+                <p><a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">Anita Borg Institute</a><span class="sub"> - 2016</span></p>
               </div>
             </div>
 
             <div class="card">
               <img src="http://66.media.tumblr.com/tumblr_m3j73uCEMi1qid2nw.gif">
               <div class="cardInfo">
-                <p>1st place amazon alexa + 2nd place IBM bluemix</p>
-                <p><a href="http://devpost.com/software/airscribe">treehacks</a><span class="sub"> - 2016</span></p>
+                <p>1st place Amazon Alexa<br>2nd place IBM BlueMix</p>
+                <p><a href="http://devpost.com/software/airscribe">TreeHacks</a><span class="sub"> - 2016</span></p>
               </div>
             </div>
 
             <div class="card">
               <img src="http://65.media.tumblr.com/tumblr_m9pdbpGWWe1qid2nw.gif">
               <div class="cardInfo">
-                <p>engineering diversity scholar</p>
-                <p><a href="http://boxdiversityscholarship.com">box</a><span class="sub"> - 2015</span></p>
+                <p>Engineering Diversity Scholar</p>
+                <p><a href="http://boxdiversityscholarship.com">Box</a><span class="sub"> - 2015</span></p>
               </div>
             </div>
 
             <div class="card">
               <img src="http://66.media.tumblr.com/tumblr_m0myqbMzsa1qcfn0j.gif">
               <div class="cardInfo">
-                <p>pennapps fellow</p>
-                <p><a href="http://pennappsfellows.com">pennapps fellows</a><span class="sub"> - 2015</span></p>
+                <p>PennApps Fellow</p>
+                <p><a href="http://pennappsfellows.com">PennApps Fellows</a><span class="sub"> - 2015</span></p>
               </div>
             </div>
 
             <div class="card">
               <img src="http://67.media.tumblr.com/tumblr_m3j74nFJao1qid2nw.gif">
               <div class="cardInfo">
-                <p>twitter flight scholarship</p>
-                <p><a href="https://dev.twitter.com/flight/2015">twitter flight</a><span class="sub"> - 2015</span></p>
+                <p>Twitter Flight Scholarship</p>
+                <p><a href="https://dev.twitter.com/flight/2015">Twitter Flight</a><span class="sub"> - 2015</span></p>
               </div>
             </div>
             
