Updated section 2 of the website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
 <head>
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-TL2MWN');</script>
-  <!-- End Google Tag Manager -->
-
   <!--Google Analytics-->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -44,17 +36,11 @@
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 
   <!-- Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-
+  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 </head>
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TL2MWN"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-
   <div>
     <div class="content">
       <div id="photo"><img id="pic" src="https://pbs.twimg.com/profile_images/783398115378290688/4lFgeP0t.jpg"></div>
@@ -73,7 +59,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="content">
       <div id="text">
+      <div id="nav" class="card">
+        <div id="work" class="navbar"><a href="index.html"><h3>Work</h3></a></div>
+        <div id="hack2" class="navbar"><a href="more.html"><h3>Hack</h3></a></div>
+      </div>
         <div id="section0">
+
           <h3>Hello!</h3>
           <p>I'm Christina! I'm studying Computer Science at UC Davis, graduating June 2017. Here are some things that I'm passionate about:
             <ul>
