Added CalHacks prize :)

--- a/index.html
+++ b/index.html
@@ -171,6 +171,14 @@
             </div>
 
             <div class="card">
+              <img src="http://66.media.tumblr.com/tumblr_ma6tbjFbOS1qid2nw.gif">
+              <div class="cardInfo">
+                <p>Best Veteran's Hack</p>
+                <p><a href="http://devpost.com/software/auxi">CalHacks</a><span class="sub"> - 2016</span></p>
+              </div>
+            </div>
+
+            <div class="card">
               <img src="http://66.media.tumblr.com/tumblr_m3j73uCEMi1qid2nw.gif">
               <div class="cardInfo">
                 <p>1st place Amazon Alexa<br>2nd place IBM BlueMix</p>
