--- a/more.html
+++ b/more.html
@@ -70,7 +70,7 @@
         </div>
           <div id="section0">
            <h3>A little more...</h3>
-            <p>When I'm not in school or studying for midterms, these are a few of the things I love doing - giving back to the community and participating in hackathons. If you know any cool events going on, please send them over as I would love to participate in them!</p>
+            <p>When I'm not in school or studying for midterms, these are a few of the things I love doing - giving back to the community and participating in hackathons. </p>
           </div>
           <br>
 
@@ -101,9 +101,10 @@
             <div class="card2">
               <img src="assets/img/arrow_left.gif">
               <div class="cardInfo">
-                <p><b>EmojiBoard</b></p>
-                <p>A  Chrome Extension that easily copy and pastes emojis.</p> 
-                <p><img src="assets/img/heart_emote.gif"> <a href="https://chrome.google.com/webstore/detail/emojiboard/knffmjloiejmfkfbdhiihpmdgndgdoia">Live Demo</a> <img src="assets/img/silence_emote.gif" style="margin-left:5px" > <a href="https://github.com/cszhu/emojiboard">GitHub</a></p>
+                <p><b>Auxi</b></p>
+                <p>A mental health app for veterans using machine learning</p> 
+                <p><img src="assets/img/star_emote.gif"> <a href="https://devpost.com/software/auxi">Best Veteran Hack @ CalHacks 2016</a></p>
+                <p> <img src="assets/img/silence_emote.gif" > <a href="https://github.com/cszhu/airscribe">GitHub</a></p>
               </div>
             </div>
 
@@ -184,6 +185,14 @@
           <br>
           <div id="section3">
             <h3>Events</h3>
+
+            <div class="card2">
+              <img src="assets/img/arrow_left.gif">
+              <div class="cardInfo">
+                <p><a href="https://calhacks.io/"><b>CalHacks 2016</b></a></p>
+                <p><span class="sub">Nov 11 - 13, 2015</span></p>
+              </div>
+            </div>
 
             <div class="card2">
               <img src="assets/img/arrow_left.gif">
