lol i forgot to update the one on my second page rip

--- a/more.html
+++ b/more.html
@@ -48,7 +48,7 @@
     <div>
 
       <div class="content">
-        <div id="photo"><img id="pic" src="https://pbs.twimg.com/profile_images/783398115378290688/4lFgeP0t.jpg"></div>
+        <div id="photo"><img id="pic" src="assets/img/bwavatarofme.png"></div>
         <div class="column">
           <center><img src="http://i748.photobucket.com/albums/xx122/luuuh/divisorias/barinhas25.gif"></center>
           <div id="title">CHRISTINA ZHU<br></div>
